--- a/app/assets/stylesheets/modules/_contacts_new.scss
+++ b/app/assets/stylesheets/modules/_contacts_new.scss
@@ -4,7 +4,7 @@
 
 .Contact-wrapper {
   max-width: 800px;
-  height: 100vh;
+  height: 800px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid lightgray;
@@ -26,17 +26,21 @@
     border: 1px solid lightgray;
     border-radius: 5px;
   }
+  .Input-area {
+    height: 80px;
+    width:600px;
+    border: 1px solid lightgray;
+  }
   .Contact-btn {
     &__color{
+      border-radius: 5px;
       border: none;
       margin-top: 20px;
       width: 300px;
       height: 50px;
+      color: lightcoral;
+      font-size: 17px;
+      font-weight: bold;
     }
-  }
-  .Input-area {
-    height: 50px;
-    width:600px;
-    
   }
 }
